<resources>
    <string name="app_name">GroceryApp</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_password">Login</string>
    <string name="link_register">Don\'t have an account? <u>Register</u></string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_mobile_no">Mobile</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_home">Home</string>
    <string name="hint_search">Search for a product...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register for an account</string>
    <string name="btn_register">Register</string>
    <string name="my_cart_title">My Cart</string>
    <string name="you_have_no_items_in_your_cart">You have no items in your cart.</string>
    <string name="search">Search</string>
    <string name="btn_checkout">Checkout</string>
    <string name="my_orders">My Orders</string>

</resources>